[package]

name = "png-texter"
version = "1.0.1-alpha"
authors = ["Simon Guglberger <simonguglberger@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Sxmon17/png-texter"
description = "A simple png chunk message encoder/decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
crc = "3.0.0"
thiserror = "1.0.38"
