[package]

name = "png-texter"
version = "1.9.0-release"
authors = ["Simon Guglberger <simonguglberger@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Sxmon17/png-texter"
description = "A simple png chunk message encoder/decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.68"
attohttpc = "0.24.1"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
colour = "0.6.0"
crc = "3.0.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
thiserror = "1.0.38"
tokio = "1.25.0"
